--- a/notebooks/html/masking_sequence_models.html
+++ b/notebooks/html/masking_sequence_models.html
@@ -7521,7 +7521,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><img alt="SELENE Logo" src="images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
+<p><img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/logo/selene-logo-640.png" style="max-height:75px;"/></p>
 <p><strong>Disclaimer:</strong> This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github.</p>
 </div>
 </div>
@@ -7813,7 +7813,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Padding Mask: RNN for Classification" src="images/illustrations/masking/masking-padding-rnn-many2one.png" style="margin:auto;max-width:400px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-padding-rnn-many2one.png" style="margin:auto;max-width:400px;width:100%"/>
 </div>
 </div>
 </div>
@@ -7899,7 +7899,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Padding Mask: RNN for PoS Tagging" src="images/illustrations/masking/masking-padding-rnn-many2many.png" style="margin:auto;max-width:400px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-padding-rnn-many2many.png" style="margin:auto;max-width:400px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8068,7 +8068,7 @@ video {max-width: 100% !important; height: auto !important; }
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="MLM Masking: BERT Example" src="images/illustrations/masking/masking-mlm-bert-example.png" style="margin:auto;max-width:400px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-mlm-bert-example.png" style="margin:auto;max-width:400px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8342,7 +8342,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Padding Mask: Calculating Attention Scores" src="images/illustrations/masking/masking-padding-attn-score-calc.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-padding-attn-score-calc.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8612,7 +8612,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Padding Mask: Attention Score Masking" src="images/illustrations/masking/masking-padding-attn-score-masking.png" style="margin:auto;max-width:700px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-padding-attn-score-masking.png" style="margin:auto;max-width:700px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8635,7 +8635,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Padding Mask: Attention Weights Calculation" src="images/illustrations/masking/masking-padding-attn-weights-calc.png" style="margin:auto;max-width:650px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-padding-attn-weights-calc.png" style="margin:auto;max-width:650px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8657,7 +8657,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Padding Mask: Calculation of Output" src="images/illustrations/masking/masking-padding-attn-out-calc.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-padding-attn-out-calc.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8728,7 +8728,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Causal Mask: Calculating Attention Scores" src="images/illustrations/masking/masking-causal-attn-score-calc.png" style="margin:auto;max-width:750px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-causal-attn-score-calc.png" style="margin:auto;max-width:750px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8841,7 +8841,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Causal Mask: Attention Score Masking" src="images/illustrations/masking/masking-causal-attn-score-masking.png" style="margin:auto;max-width:700px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-causal-attn-score-masking.png" style="margin:auto;max-width:700px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8863,7 +8863,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Causal Mask: Attention Weights Calculation" src="images/illustrations/masking/masking-causal-attn-weights-calc.png" style="margin:auto;max-width:650px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-causal-attn-weights-calc.png" style="margin:auto;max-width:650px;width:100%"/>
 </div>
 </div>
 </div>
@@ -8885,7 +8885,7 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<img alt="Causal Mask: Calculation of Output" src="images/illustrations/masking/masking-causal-attn-out-calc.png" style="margin:auto;max-width:800px;width:100%"/>
+<img src="https://raw.githubusercontent.com/chrisvdweth/selene/refs/heads/master/notebooks/images/illustrations/masking/masking-causal-attn-out-calc.png" style="margin:auto;max-width:800px;width:100%"/>
 </div>
 </div>
 </div>
